--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "description": "Teste de REST API para tutorial do youtube",
+  "description": "API RESTful con Node.js y Express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "keywords": [
+    "rest",
+    "api",
     "node",
-    "tutorial",
-    "youtube"
+    "express"
   ],
-  "author": "Fernando Silva Maransatto",
+  "author": "Adriel Maximus",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
