--- a/package.json
+++ b/package.json
@@ -1,32 +1,16 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "description": "API RESTful con Node.js y Express",
+  "description": "A rest API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "rest",
-    "api",
     "node",
-    "express"
+    "rest",
+    "api"
   ],
   "author": "Adriel Maximus",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "bcrypt": "^3.0.7",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.2",
-    "mysql": "^2.17.1",
-    "randexp": "^0.5.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+  "license": "ISC"
 }
