--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Adriel Maximus",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
