--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "description": "A rest API",
+  "description": "REST API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [
-    "node",
-    "rest",
-    "api"
+    "node"
   ],
   "author": "Adriel Maximus",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "axios": "^0.21.1",
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "mysql": "^2.17.1",
+    "randexp": "^0.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
